--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "eslint-plugin-vue": "^8.2.0",
     "postcss": "^8.4.4",
     "prettier": "^2.5.1"
+  },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.19.2"
   }
 }
